maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:77: error: illegal start of simple expression
    }
    ^